@@ -7,6 +7,8 @@
 * Added /Health endpoint for load balancer checks.
 * Improved handling of cases where the client closes the connection before
   we begin to send our answer.
+* Fixed a case in QuotedPrintable decoder which may lead to incorrect decoding.
+* Added unit tests. 
 
 June 4, 2014 - Version 1.0
 ==========================
